# cubic-python

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: publish.yml
src/cubic/: __init__.py  _async_client.py  _client.py  _exceptions.py  types.py  webhooks.py
src/cubic/resources/: attachments.py  completions.py  cubes.py  models.py  polycubes.py  projects.py
tests/: conftest.py  test_async_client.py  test_attachments.py  test_batch.py  test_completions.py  test_cubes.py  test_errors_and_retries.py  test_models.py  test_polycubes.py  test_pool_limits.py  test_projects.py  test_wait.py  test_webhooks.py
