[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
# PyPI distribution name ("cubic" is taken by an unrelated bioimaging package);
# the import package remains `cubic`.
name = "cubic-sdk"
version = "0.5.0"
description = "Official Python SDK for Cubic — run your Cubes and Polycubes from any application."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Cubic" }]
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.7",
]
keywords = ["cubic", "llm", "prompts", "sdk"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://cubic.zone"
Documentation = "https://cubic.zone/docs"
Repository = "https://github.com/cubic-zone/cubic-python"
Changelog = "https://github.com/cubic-zone/cubic-python/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.23"]

[tool.hatch.build.targets.wheel]
packages = ["src/cubic"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
